// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AdvancedSearchCaption should render as expected with no props 1`] = `
<div
  className="undefined searchQueryCaption"
>
  <React.Fragment>
    <span>
       
       
    </span>
    <span>
      Any field
       
    </span>
    <span>
       
      contains
       
    </span>
    <span>
       
      anything
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Collection
       
    </span>
    <span>
       
      is one of
       
    </span>
    <span>
       
      UQ:120743, UQ:217419 or UQ:217422
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Author ID
       
    </span>
    <span>
       
      is
       
    </span>
    <span>
       
      570
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Work type
       
    </span>
    <span>
       
      is one of
       
    </span>
    <span>
       
      Audio document or Book
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
       
    </span>
    <span>
       
      is
       
    </span>
    <span>
       
      <span
        className="value"
      >
        open access/full text
      </span>
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Published
       
    </span>
    <span>
       
      between
       
    </span>
    <span>
       
      1991 to 2012
    </span>
  </React.Fragment>
</div>
`;

exports[`Component AdvancedSearchCaption updateStateData should return expected with props when props change 1`] = `
<div
  className="search-body searchQueryCaption"
>
  <React.Fragment>
    <span>
       
       
    </span>
    <span>
      Any field
       
    </span>
    <span>
       
      contains
       
    </span>
    <span>
       
      sdsdfsdfgsdfg
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Collection
       
    </span>
    <span>
       
      is one of
       
    </span>
    <span>
       
      UQ:120743, UQ:217419 or UQ:217422
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Author ID
       
    </span>
    <span>
       
      is
       
    </span>
    <span>
       
      81861
    </span>
  </React.Fragment>
</div>
`;

exports[`Component AdvancedSearchCaption updateStateData should return expected with props when props change 2`] = `
<div
  className="search-body searchQueryCaption"
>
  <React.Fragment>
    <span>
       
       
    </span>
    <span>
      Any field
       
    </span>
    <span>
       
      contains
       
    </span>
    <span>
       
      sdsdfsdfgsdfg
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Collection
       
    </span>
    <span>
       
      is one of
       
    </span>
    <span>
       
      UQ:120743, UQ:217419 or UQ:217422
    </span>
  </React.Fragment>
  <React.Fragment>
    <span>
       
       AND 
       
    </span>
    <span>
      Author ID
       
    </span>
    <span>
       
      is
       
    </span>
    <span>
       
      81861
    </span>
  </React.Fragment>
</div>
`;
